--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "scaffold-ui",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/*",
+    "apps/*"
   ],
   "scripts": {
     "build": "yarn workspaces run build",
