--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -2,6 +2,7 @@
   "name": "@scaffold-ui/hooks",
   "version": "0.1.0",
   "description": "React hooks for scaffold-ui",
+  "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
@@ -20,6 +21,7 @@
     "@types/react": "^19.0.7",
     "react": "^19.0.0",
     "rollup": "3.21.0",
+    "rollup-plugin-typescript2": "^0.34.1",
     "typescript": "^5.6.3"
   }
 }
