--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -10,26 +10,25 @@
     "dist"
   ],
   "scripts": {
-    "build": "yarn run clean && yarn build:esm+types",
+    "dev": "pnpm run build:esm+types --watch",
+    "build": "pnpm run clean && pnpm build:esm+types",
     "build:esm+types": "tsc --project tsconfig.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@tanstack/react-query": "^5.69.0",
-    "react": "^19.0.0",
-    "viem": "^2.23.12",
-    "wagmi": "^2.14.15"
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.4",
+    "@tanstack/react-query": "5.59.15",
+    "react": "*",
+    "react-dom": "*",
+    "viem": "2.23.0",
+    "wagmi": "2.14.11"
   },
   "devDependencies": {
-    "@tanstack/react-query": "^5.69.0",
-    "@types/react": "^19.0.7",
-    "react": "^19.0.0",
     "rollup": "3.21.0",
     "rollup-plugin-typescript2": "^0.34.1",
-    "typescript": "^5.6.3",
-    "viem": "^2.23.12",
-    "wagmi": "^2.14.15"
+    "typescript": "^5.6.3"
   },
   "dependencies": {
     "blo": "^1.2.0"
