--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -18,12 +18,10 @@
   },
   "peerDependencies": {
     "@types/react": "^19.0.7",
-    "@types/react-dom": "^19.0.4",
-    "@tanstack/react-query": "5.59.15",
-    "react": "*",
-    "react-dom": "*",
-    "viem": "2.23.0",
-    "wagmi": "2.14.11"
+    "@tanstack/react-query": "^5.59.15",
+    "react": "^19.0.0",
+    "viem": "^2.23.0",
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
     "typescript": "^5.6.3"
