--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.4",
+    "@scaffold-ui/hooks": "workspace:*",
+    "blo": "^1.2.0",
     "burner-connector": "^0.0.11",
     "next": "15.2.3",
     "react": "^19.0.0",
