--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -14,17 +14,25 @@
     "build": "pnpm run clean && pnpm build:esm+types",
     "build:esm+types": "tsc --project tsconfig.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
     "clean": "rm -rf dist",
+    "lint": "eslint . --ignore-pattern 'dist/' ",
+    "format": "prettier --write . '!(node_modules|dist)/**/*' '!CHANGELOG.md'",
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@types/react": "^19.0.7",
     "@tanstack/react-query": "^5.59.15",
+    "@types/react": "^19.0.7",
     "react": "^19.0.0",
     "viem": "^2.23.0",
     "wagmi": "^2.14.11"
   },
   "devDependencies": {
-    "typescript": "^5.6.3"
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
   },
   "dependencies": {
     "blo": "^1.2.0"
