update Address component

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -6,12 +6,23 @@
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/esm/index.js",
+      "default": "./dist/esm/index.js"
+    },
+    "./styles.css": "./dist/styles.css"
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "pnpm run build:esm+types --watch",
-    "build": "pnpm run clean && pnpm build:esm+types",
+    "dev": "pnpm run /^dev:.*/",
+    "dev:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
+    "dev:types": "tsc --project tsconfig.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types --watch",
+    "build": "pnpm run clean && pnpm run build:css && pnpm build:esm+types",
+    "build:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify",
     "build:esm+types": "tsc --project tsconfig.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
     "clean": "rm -rf dist",
     "lint": "eslint . --ignore-pattern 'dist/' ",
@@ -28,12 +39,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/cli": "^4.1.10",
     "eslint": "^9",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.3",
+    "tailwindcss": "^4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
-  },
-  "dependencies": {}
+  }
 }
