--- a/example/package.json
+++ b/example/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "viem": "^2.23.13",
-    "wagmi": "^2.14.15"
+    "wagmi": "^2.14.15",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
