--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,7 +35,8 @@
     "@types/react": "^19.0.7",
     "react": "^19.0.0",
     "viem": "^2.23.0",
-    "wagmi": "^2.14.11"
+    "wagmi": "^2.14.11",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
