--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.59.15",
     "@scaffold-ui/components": "workspace:*",
+    "@scaffold-ui/debug-contracts": "workspace:*",
     "@scaffold-ui/hooks": "workspace:*",
     "blo": "^1.2.0",
     "burner-connector": "^0.0.11",
