--- a/packages/debug-contracts/package.json
+++ b/packages/debug-contracts/package.json
@@ -48,5 +48,8 @@
     "tailwindcss": "^4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.2.0"
   }
 }
