--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,8 +35,7 @@
     "@types/react": "^19.0.7",
     "react": "^19.0.0",
     "viem": "^2.23.0",
-    "wagmi": "^2.14.11",
-    "usehooks-ts": "^3.1.0"
+    "wagmi": "^2.14.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
@@ -48,5 +47,8 @@
     "tailwindcss": "^4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
+  },
+  "dependencies": {
+    "usehooks-ts": "^3.1.1"
   }
 }
