get write working

--- a/packages/debug-contracts/package.json
+++ b/packages/debug-contracts/package.json
@@ -50,6 +50,7 @@
     "typescript-eslint": "^8.27.0"
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0"
+    "@heroicons/react": "^2.2.0",
+    "react-hot-toast": "^2.5.2"
   }
 }
