make style.css availble as direct file

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -12,10 +12,12 @@
       "import": "./dist/esm/index.js",
       "default": "./dist/esm/index.js"
     },
-    "./styles.css": "./dist/styles.css"
+    "./styles.css": "./dist/styles.css",
+    "./src/styles.css": "./src/styles.css"
   },
   "files": [
-    "dist"
+    "dist",
+    "src/styles.css"
   ],
   "scripts": {
     "dev": "pnpm run /^dev:.*/",
