--- a/packages/debug-contracts/package.json
+++ b/packages/debug-contracts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@scaffold-ui/components",
-  "version": "0.1.2-rc.0",
-  "description": "React components for scaffold-ui",
+  "name": "@scaffold-ui/debug-contracts",
+  "version": "0.1.0",
+  "description": "Debug contracts component for scaffold-ui",
   "type": "module",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -12,12 +12,10 @@
       "import": "./dist/esm/index.js",
       "default": "./dist/esm/index.js"
     },
-    "./styles.css": "./dist/styles.css",
-    "./src/styles.css": "./src/styles.css"
+    "./styles.css": "./dist/styles.css"
   },
   "files": [
-    "dist",
-    "src/styles.css"
+    "dist"
   ],
   "scripts": {
     "dev": "pnpm run /^dev:.*/",
@@ -32,6 +30,7 @@
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
+    "@scaffold-ui/components": "workspace:*",
     "@scaffold-ui/hooks": "workspace:*",
     "@tanstack/react-query": "^5.59.15",
     "@types/react": "^19.0.7",
@@ -46,11 +45,12 @@
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4.1.12",
+    "tailwindcss": "^4",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0"
   },
   "dependencies": {
-    "usehooks-ts": "^3.1.1"
+    "@heroicons/react": "^2.2.0",
+    "react-hot-toast": "^2.5.2"
   }
 }
