--- a/docs/package.json
+++ b/docs/package.json
@@ -16,6 +16,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "vocs": "^1.0.13"
+    "@scaffold-ui/components": "link:../packages/components",
+    "@scaffold-ui/hooks": "link:../packages/hooks",
+    "@tanstack/react-query": "^5.59.15",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "viem": "^2.23.13",
+    "vocs": "^1.0.13",
+    "wagmi": "^2.14.15"
   }
 }
