--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "pnpm --filter @scaffold-ui/hooks --filter @scaffold-ui/components run build && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write ."
