--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@uniswap/sdk-core": "^7.7.2",
     "@uniswap/v2-sdk": "^4.15.2",
-    "blo": "^1.2.0"
+    "blo": "^1.2.0",
+    "usehooks-ts": "^3.1.1"
   }
 }
