add link to repo-url + configure permissions

--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -9,6 +9,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scaffold-eth/scaffold-ui.git"
+  },
   "scripts": {
     "dev": "pnpm run build:esm+types --watch",
     "build": "pnpm run clean && pnpm build:esm+types",
