--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,6 +19,10 @@
     "dist",
     "src/styles.css"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scaffold-eth/scaffold-ui.git"
+  },
   "scripts": {
     "dev": "pnpm run /^dev:.*/",
     "dev:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
