--- a/packages/debug-contracts/package.json
+++ b/packages/debug-contracts/package.json
@@ -17,6 +17,10 @@
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/scaffold-eth/scaffold-ui.git"
+  },
   "scripts": {
     "dev": "pnpm run /^dev:.*/",
     "dev:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
