--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,8 @@ on:
 
 permissions:
   id-token: write # Required for OIDC
+  contents: write # Required for changesets to create commits and tags
+  pull-requests: write # Required for changesets to open/update release PRs
 
 concurrency: ${{ github.workflow }}-${{ github.ref }}
 
