--- a/docs/package.json
+++ b/docs/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@scaffold-ui/components": "workspace:*",
+    "@scaffold-ui/debug-contracts": "workspace:*",
     "@scaffold-ui/hooks": "workspace:*",
     "@tanstack/react-query": "^5.59.15",
     "@types/react": "^19",
