--- a/docs/package.json
+++ b/docs/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vocs dev",
-    "build": "pnpm --filter @scaffold-ui/hooks --filter @scaffold-ui/components run build && vocs build",
+    "build": "pnpm --filter @scaffold-ui/hooks --filter @scaffold-ui/components --filter @scaffold-ui/debug-contracts run build && vocs build",
     "preview": "vocs preview",
     "format": "prettier --write ."
   },
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@scaffold-ui/components": "workspace:*",
+    "@scaffold-ui/debug-contracts": "workspace:*",
     "@scaffold-ui/hooks": "workspace:*",
     "@tanstack/react-query": "^5.59.15",
     "@types/react": "^19",
